--- a/docker/user/Dockerfile
+++ b/docker/user/Dockerfile
@@ -1,13 +1,30 @@
-FROM node:18-alpine
+# Development
+FROM node:18-alpine as development
 
 WORKDIR /usr/src/app
 
-RUN chown -R node:node /usr/src/app
-
-USER node
-
-COPY --chown=node:node ./services/user/package*.json ./
+COPY ./services/user/package*.json ./
 
 RUN npm install
 
-COPY --chown=node:node ./services/user ./
+COPY ./services/user ./
+
+RUN npm run build
+
+# Production
+FROM node:18-alpine as production
+
+ARG NODE_ENV=production
+ENV NODE_ENV=${NODE_ENV}
+
+WORKDIR /usr/src/app
+
+COPY ./services/user/package*.json ./
+
+RUN npm install --only=production
+
+COPY ./services/user ./
+
+COPY --from=development /usr/src/app/dist ./dist
+
+CMD ["node", "dist/main"]
