user: update dockerfile

--- a/docker/user/Dockerfile
+++ b/docker/user/Dockerfile
@@ -1,5 +1,5 @@
 # Development
-FROM node:18-alpine as development
+FROM node:18 as development
 
 WORKDIR /usr/src/app
 
@@ -9,10 +9,12 @@ RUN npm install
 
 COPY ./services/user ./
 
+RUN apt-get update -y && apt-get install -y openssl
+
 RUN npm run build
 
 # Production
-FROM node:18-alpine as production
+FROM node:18 as production
 
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
@@ -24,6 +26,8 @@ COPY ./services/user/package*.json ./
 RUN npm install --only=production
 
 COPY ./services/user ./
+
+RUN apt-get update -y && apt-get install -y openssl
 
 COPY --from=development /usr/src/app/dist ./dist
 
